fix #1 - Add breadcrub URL

--- a/breadcrumb-app/src/app/component/breadcrumb/breadcrumb.component.html
+++ b/breadcrumb-app/src/app/component/breadcrumb/breadcrumb.component.html
@@ -1,3 +1,5 @@
 <ul>
-  <li *ngFor="let breadcrumb of (breadcrumbs$ | async)">{{ breadcrumb.label }}</li>
+  <li *ngFor="let breadcrumb of (breadcrumbs$ | async)">
+    <a [href]="breadcrumb.url">{{ breadcrumb.label }}</a>
+  </li>
 </ul>
